<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/Starter_info"
        android:layout_width="344dp"
        android:layout_height="71dp"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/Welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/teretulemast_t_ll_kehitell_n_sulle_ihan_oma_vappunimi" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/Input_Layout"
        android:layout_width="362dp"
        android:layout_height="240dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="31dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Starter_info">

        <TextView
            android:id="@+id/tvName"
            android:layout_width="372dp"
            android:layout_height="47dp"
            android:text="@string/kerro_nimesi1" />

        <EditText
            android:id="@+id/tvInput_Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:minHeight="48dp"
            android:text="" />

        <TextView
            android:id="@+id/tvMonth"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:text="@string/kerro_syntym_kuukautesi1" />

        <EditText
            android:id="@+id/tvInput_Month"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:inputType="text"
            android:minHeight="48dp"
            android:text=""
            tools:ignore="LabelFor" />

    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="199dp"
        android:layout_height="81dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="1dp"
        android:gravity="center"
        android:onClick="ButtonPress"
        android:text="@string/paina_t_st_niin_tapahtuu_taikaa"
        app:layout_constraintBottom_toTopOf="@+id/tvResults_Layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Input_Layout" />

    <LinearLayout
        android:id="@+id/tvResults_Layout"
        android:layout_width="360dp"
        android:layout_height="128dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button">

        <TextView
            android:id="@+id/tvResults_Text"
            android:layout_width="346dp"
            android:layout_height="37dp"
            android:minHeight="48dp"
            android:text="@string/vappu_nimesi_on" />

        <TextView
            android:id="@+id/tvNew_Name"
            android:layout_width="346dp"
            android:layout_height="57dp"
            android:minHeight="48dp"
            android:text="" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>